--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,14 @@ pretty = true
 [tool.flake8]
 max-line-length = 100
 extend-ignore = ["E203", "W503"]
+max-line-length = 100
+exclude = [
+  ".venv",
+  ".git",
+  "__pycache__",
+  ".mypy_cache",
+  ".pytest_cache"
+]
 
 [tool.black]
 line-length = 100
